Remove some French localizations. Update English nibs and strings (add space before ':', ...) Bump version. Update Key Trap with transparency layer. Update library windows (start/stop icon)

--- a/SparkPlugins/AppleScript/Resources/English.lproj/Localizable.strings
+++ b/SparkPlugins/AppleScript/Resources/English.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "CREATE_ACTION_WITHOUT_SOURCE_ALERT_MSG" = "You must type a script before trying to compile, or choose the “File” tab if you want to execute a compiled Script.";
 
 /* File Script Action Description (%@ => File name) */
-"DESC_EXECUTE_FILE" = "Execute %@";
+"DESC_EXECUTE_FILE" = "Execute “%@”";
 
 /* Simple Script Action Description */
 "DESC_EXECUTE_SOURCE" = "Execute an AppleScript";
