--- a/SparkPlugins/iTunes/Resources/English.lproj/Localizable.strings
+++ b/SparkPlugins/iTunes/Resources/English.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 "DESC_NEXT" = "Next Track";
 
 /* Play Playlist * Action Description * (%@ = playlist name) */
-"DESC_PLAY_LIST" = "Play Playlist «%@»";
+"DESC_PLAY_LIST" = "Play Playlist “%@”";
 
 /* Play/Pause * Action Description * */
 "DESC_PLAY_PAUSE" = "Play/Pause";
@@ -50,16 +50,16 @@
 "Hide" = "Hide";
 
 /* Error: Action unknown * Title * (%@ => name) */
-"INVALID_ACTION" = "The Spark iTunes Action «%@» is invalid.";
+"INVALID_ACTION" = "The Spark iTunes Action “%@” is invalid.";
 
 /* Error: Action unknown * Msg * (%@ => name) */
-"INVALID_ACTION_MSG" = "The «%@» is corrupted and cannot be executed. Please edit it with Spark to solve the problem.";
+"INVALID_ACTION_MSG" = "The “%@” is corrupted and cannot be executed. Please edit it with Spark to solve the problem.";
 
 /* Error: no such object playlist * Title * (%@ => name) */
-"PLAYLIST_NOT_FOUND" = "The iTunes playlist «%@» does not exists.";
+"PLAYLIST_NOT_FOUND" = "The iTunes playlist “%@” does not exists.";
 
 /* Error: no such playlist * Msg * (%@ => name) */
-"PLAYLIST_NOT_FOUND_MSG" = "Spark cannot find the playlist «%@». Check if this list always exists.";
+"PLAYLIST_NOT_FOUND_MSG" = "Spark cannot find the playlist “%@”. Check if this list always exists.";
 
 /* Hide/Show button * Visual settings * */
 "Show" = "Show";
