--- a/SparkPlugins/Documents/Resources/English.lproj/Localizable.strings
+++ b/SparkPlugins/Documents/Resources/English.lproj/Localizable.strings
@@ -20,19 +20,19 @@
 "CREATE_ACTION_WITHOUT_URL_ALERT_MSG" = "Please type an URL in the “URL” field.";
 
 /* Open (%@ => document) * description * */
-"DESC_OPEN" = "Open %@";
+"DESC_OPEN" = "Open “%@”";
 
 /* Open Selection * description * */
 "DESC_OPEN_SELECTION" = "Open selection";
 
 /* Open Selection with (%@ => application) * description * */
-"DESC_OPEN_SELECTION_WITH" = "Open Selection With %@";
+"DESC_OPEN_SELECTION_WITH" = "Open Selection With “%@”";
 
 /* Open URL * description * */
 "DESC_OPEN_URL" = "Open URL";
 
 /* Open with (%1$@ => document, %2$@ => application) * description * */
-"DESC_OPEN_WITH" = "Open %1$@ with %2$@";
+"DESC_OPEN_WITH" = "Open “%1$@” with “%2$@”";
 
 /* Open with (%@ => document) * description * */
 "DESC_REVEAL_DOCUMENT" = "Reveal “%@” in Finder";
