--- a/SparkPlugins/System/Resources/English.lproj/Localizable.strings
+++ b/SparkPlugins/System/Resources/English.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 "DESC_FAST_LOGOUT" = "Switch to Login Window";
 
 /* Switch to * Action Description * (%@ => user name) */
-"DESC_FAST_SWITCH" = "Switch to %@";
+"DESC_FAST_SWITCH" = "Switch to “%@”";
 
 /* Invalid Action * Action Description * */
 "DESC_INVALID" = "Invalid Action";
@@ -47,7 +47,7 @@
 "INVALID_ACTION_ALERT" = "Spark cannot execute the requested action.";
 
 /* Error When trying to execute but Action unknown ** Msg ** */
-"INVALID_ACTION_ALERT_MSG" = "«%@» could not be load. Try to edit it with Spark to solve the problem.";
+"INVALID_ACTION_ALERT_MSG" = "“%@” could not be load. Try to edit it with Spark to solve the problem.";
 
 /* Switch to... Menu Item */
 "Switch to..." = "Switch to…";
