Update Editor localization. Update iTunes to handle Play/Pause->autorun property. Update SEGear to use vector graphic.

--- a/SparkEditor/Resources/English.lproj/Localizable.strings
+++ b/SparkEditor/Resources/English.lproj/Localizable.strings
@@ -1,11 +1,108 @@
+/* Application HotKeys - Application View Title (%@ => name) */
+"%@ HotKeys" = "%@ HotKeys";
+
 /* About Plugin (%@ => Plugin name) */
 "ABOUT_PLUGIN_BOX_TITLE" = "%@ Plugin";
 
 /* About Plugin (%@ => Plugin name) */
 "ABOUT_PLUGIN_MENU_ITEM" = "%@…";
 
+/* Plugin preferences domain - built-in */
+"Built-in" = "Built-in";
+
+/* Trigger already used - Cancel */
+"Cancel" = "Cancel";
+
+/* Open Spark Library * Title * */
+"CHOOSE_IMPORT_LIBRARY_ACTION" = "CHOOSE_IMPORT_LIBRARY_ACTION";
+
+/* Open Spark Library */
+"CHOOSE_IMPORT_LIBRARY_ACTION_CANCEL" = "CHOOSE_IMPORT_LIBRARY_ACTION_CANCEL";
+
+/* Open Spark Library */
+"CHOOSE_IMPORT_LIBRARY_ACTION_MERGE" = "CHOOSE_IMPORT_LIBRARY_ACTION_MERGE";
+
+/* Open Spark Library * Msg * */
+"CHOOSE_IMPORT_LIBRARY_ACTION_MSG" = "CHOOSE_IMPORT_LIBRARY_ACTION_MSG";
+
+/* Open Spark Library */
+"CHOOSE_IMPORT_LIBRARY_ACTION_RESTORE" = "CHOOSE_IMPORT_LIBRARY_ACTION_RESTORE";
+
+/* Plugin preferences domain - computer */
+"Computer" = "Computer";
+
+/* Segment Menu ToolTips */
+"CREATE_TRIGGER_TOOLTIP" = "CREATE_TRIGGER_TOOLTIP";
+
+/* Trigger already used (%@ => entry name) - Message */
+"Do you want to replace the action '%@' by your new action?" = "Do you want to replace the action '%@' by your new action?";
+
+/* Front Applications - header cell */
+"Front Application" = "Front Application";
+
+/* Globals Application name */
+"Globals" = "Globals";
+
+/* Globals HotKeys - Application View Title */
+"Globals HotKeys" = "Globals HotKeys";
+
+/* Inherits 'Built-in Plugin' title */
+"Globals Setting" = "Globals Setting";
+
+/* Library Header Cell */
+"HotKey Groups" = "HotKey Groups";
+
+/* Import failed (%@ => filename) * Title * */
+"INVALID_FILE_ALERT" = "INVALID_FILE_ALERT";
+
+/* Open failed * Msg * */
+"INVALID_FILE_ALERT_MSG" = "INVALID_FILE_ALERT_MSG";
+
+/* Library list name */
+"Library" = "Library";
+
+/* Open Spark Library * Title * */
+"LIBRARY_RESTORED_NOTIFICATION" = "LIBRARY_RESTORED_NOTIFICATION";
+
+/* Open Spark Library */
+"LIBRARY_RESTORED_NOTIFICATION_RESTART" = "LIBRARY_RESTORED_NOTIFICATION_RESTART";
+
+/* More Recent plugin installed */
+"MORE_RECENT_PLUGIN_INSTALLED_ALERT" = "MORE_RECENT_PLUGIN_INSTALLED_ALERT";
+
+/* More Recent plugin installed */
+"MORE_RECENT_PLUGIN_INSTALLED_ALERT_MSG" = "MORE_RECENT_PLUGIN_INSTALLED_ALERT_MSG";
+
+/* New List default name */
+"New List" = "New List";
+
+/* New Trigger Menu Title */
+"NEW_TRIGGER_MENU" = "NEW_TRIGGER_MENU";
+
+/* No help menu item title */
+"no help" = "no help";
+
+/* Alert default button */
+"OK" = "OK";
+
+/* Trigger already used - Replace */
+"Replace" = "Replace";
+
+/* Spark Daemon status string */
+"Start Spark Daemon" = "Start Spark Daemon";
+
 /* Spark Daemon Menu Title * Active * */
-"ACTIVE_SPARK_MENU" = "ACTIVE_SPARK_MENU";
+"START_SPARK_DAEMON_MENU" = "START_SPARK_DAEMON_MENU";
+
+/* Spark Daemon status string */
+"Stop Spark Daemon" = "Stop Spark Daemon";
 
 /* Spark Daemon Menu Title * Desactive * */
-"DEACTIVE_SPARK_MENU" = "DEACTIVE_SPARK_MENU";
+"STOP_SPARK_DAEMON_MENU" = "STOP_SPARK_DAEMON_MENU";
+
+/* Trigger already used (%@ => entry name) - Title */
+"The '%@' action already use the same shortcut." = "The '%@' action already use the same shortcut.";
+
+/* Plugin preferences domain - user */
+"User" = "User";
+
