Start to implements Library Archive

--- a/SparkEditor/Resources/English.lproj/InfoPlist.strings
+++ b/SparkEditor/Resources/English.lproj/InfoPlist.strings
@@ -7,3 +7,4 @@ CFBundleHelpBookName = "Spark Help";
 SparkListFile = "Spark List File";
 SparkLibraryFile = "Spark Library File";
 SparkActionPlugin = "Spark Action Plugin";
+SparkLibraryArchive = "Spark Library Archive";
