--- a/SparkEditor/Resources/English.lproj/Localizable.strings
+++ b/SparkEditor/Resources/English.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 /* Plugin preferences domain - built-in */
 "Built-in" = "Built-in";
 
-/* Trigger already used - Cancel */
+/* Cancel - Button */
 "Cancel" = "Cancel";
 
 /* Open Spark Library * Title * */
@@ -61,12 +61,6 @@
 /* Library list name */
 "Library" = "Library";
 
-/* Open Spark Library * Title * */
-"LIBRARY_RESTORED_NOTIFICATION" = "LIBRARY_RESTORED_NOTIFICATION";
-
-/* Open Spark Library */
-"LIBRARY_RESTORED_NOTIFICATION_RESTART" = "LIBRARY_RESTORED_NOTIFICATION_RESTART";
-
 /* More Recent plugin installed */
 "MORE_RECENT_PLUGIN_INSTALLED_ALERT" = "MORE_RECENT_PLUGIN_INSTALLED_ALERT";
 
@@ -82,10 +76,10 @@
 /* No help menu item title */
 "no help" = "no help";
 
-/* Alert default button */
+/* OK - Button */
 "OK" = "OK";
 
-/* Trigger already used - Replace */
+/* Replace - Button */
 "Replace" = "Replace";
 
 "REVERT_BACKUP" = "Reverting will cause your current database to be overwritten";
@@ -95,13 +89,13 @@
 "Start Spark Daemon" = "Start Spark Daemon";
 
 /* Spark Daemon Menu Title * Active * */
-"START_SPARK_DAEMON_MENU" = "START_SPARK_DAEMON_MENU";
+"START_SPARK_DAEMON_MENU" = "Start Spark Daemon";
 
 /* Spark Daemon status string */
 "Stop Spark Daemon" = "Stop Spark Daemon";
 
 /* Spark Daemon Menu Title * Desactive * */
-"STOP_SPARK_DAEMON_MENU" = "STOP_SPARK_DAEMON_MENU";
+"STOP_SPARK_DAEMON_MENU" = "Stop Spark Daemon";
 
 /* Trigger already used (%@ => entry name) - Title */
 "The '%@' action already use the same shortcut." = "The '%@' action already use the same shortcut.";
