--- a/SparkEditor/Resources/English.lproj/SEEditor.strings
+++ b/SparkEditor/Resources/English.lproj/SEEditor.strings
@@ -22,7 +22,7 @@
 /* Hotkey Type column header */
 "HOTKEY_TYPE_HEADER" = "HotKey Type";
 
-/* Alert default button */
+/* OK - Button */
 "OK" = "OK";
 
 /* Plugin raise exception - Title */
