Ready for beta 2

--- a/SparkPlugins/iTunes/Resources/English.lproj/Localizable.strings
+++ b/SparkPlugins/iTunes/Resources/English.lproj/Localizable.strings
@@ -59,7 +59,7 @@
 "PLAYLIST_NOT_FOUND" = "The iTunes playlist “%@” does not exists.";
 
 /* Error: no such playlist * Msg * (%@ => name) */
-"PLAYLIST_NOT_FOUND_MSG" = "Spark cannot find the playlist “%@”. Check if this list always exists.";
+"PLAYLIST_NOT_FOUND_MSG" = "Spark cannot find the associated playlist. Check if this list always exists and update the action “%@”.";
 
 /* Hide/Show button * Visual settings * */
 "Show" = "Show";
