Update Old icons importation

--- a/SparkPlugins/System/Resources/English.lproj/Localizable.strings
+++ b/SparkPlugins/System/Resources/English.lproj/Localizable.strings
@@ -42,7 +42,13 @@
 
 /* Volume Mute * Action Description * */
 "DESC_VOLUME_MUTE" = "Mute";
-                                                
+
+/* Brightness Up * Action Description * */
+"DESC_BRIGHTNESS_UP" = "Increase Brightness";
+
+/* Brightness Down * Action Description * */
+"DESC_BRIGHTNESS_DOWN" = "Decrease Brightness";
+        
 /* Error When trying to execute but Action unknown ** Title ** */
 "INVALID_ACTION_ALERT" = "Spark cannot execute the requested action.";
 
