Correct lots of Panther issues. Improve Library cleanup by removing orphan objects. Correct issus with unix end of line in HotKeyToolKit events.

--- a/SparkPlugins/System/Resources/English.lproj/Localizable.strings
+++ b/SparkPlugins/System/Resources/English.lproj/Localizable.strings
@@ -1,6 +1,9 @@
 /* Should confirm ... */
 "..." = "…";
 
+/* Empty trash - Action Description */
+"DESC_EJECT" = "Eject CD/DVD";
+
 /* Empty trash * Action Description * */
 "DESC_EMPTY_TRASH" = "Empty Trash";
 
@@ -54,10 +57,4 @@
 
 /* Error When trying to execute but Action unknown ** Msg ** */
 "INVALID_ACTION_ALERT_MSG" = "“%@” could not be load. Try to edit it with Spark to solve the problem.";
-
-/* Switch to... Menu Item */
-"Switch to..." = "Switch to…";
-
-/* Screen Saver Menu Item */
-"Screen Saver" = "Screen Saver";
 
