--- a/SparkPlugins/iTunes/Resources/English.lproj/Localizable.strings
+++ b/SparkPlugins/iTunes/Resources/English.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 "DEFAULT_RATE_TRACK_NAME" = "Rate current track…";
 
 /* Eject CD * Action Description * */
-"DESC_EJECT" = "Eject CD";
+"DESC_EJECT" = "Eject Audio CD";
 
 /* Launch iTunes * Action Description * */
 "DESC_LAUNCH" = "Launch iTunes";
