--- a/SparkPlugins/Text/Resources/English.lproj/InfoPlist.strings
+++ b/SparkPlugins/Text/Resources/English.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
 /* Localized versions of Info.plist keys */
 NSHumanReadableCopyright = "© 2004 - 2007, Shadow Lab.";
 
-SparkPluginName = "Text";
+SparkPluginName = "Keyboard";
