Update for ShadowKit + new Shading API

--- a/HotKeyToolKit/English.lproj/Keyboard.strings
+++ b/HotKeyToolKit/English.lproj/Keyboard.strings
@@ -34,6 +34,13 @@
 /* F16 Key display String */
 "F16" = "F16";
 
+/* F17 Key display String */
+"F17" = "F17";
+/* F18 Key display String */
+"F18" = "F18";
+/* F19 Key display String */
+"F19" = "F19";
+
 /* Help Key display String */
 "help" = "help";
 
