--- a/SparkEditor/Resources/English.lproj/SEUpdater.strings
+++ b/SparkEditor/Resources/English.lproj/SEUpdater.strings
@@ -1,6 +1,6 @@
 /* Url of the update file (.xml or .plist). Do not localize. */
-"UPDATE_FILE_URL" = "http://www.shadowlab.org/Software/Spark/versions.xml";
-// "UPDATE_FILE_URL" = "http://localhost:8080/Software/Spark/versions.xml";
+// "UPDATE_FILE_URL" = "http://www.shadowlab.org/Software/Spark/versions.xml";
+"UPDATE_FILE_URL" = "http://shadowlab/Software/updates/versions?sign=Sprk";
 
 /* The url of the update page. Do not localize. */
 "UPDATE_PAGE_URL" = "http://www.shadowlab.org/Software/spark3.php";
