--- a/SparkEditor/Resources/English.lproj/InfoPlist.strings
+++ b/SparkEditor/Resources/English.lproj/InfoPlist.strings
@@ -4,6 +4,8 @@ NSHumanReadableCopyright = "© 2004 - 2007, Shadow Lab.";
 CFBundleHelpBookFolder = "Spark Help";
 CFBundleHelpBookName = "Spark Help";
 
+SUpdaterURL = "http://www.shadowlab.org/Software/updates/versions?software=Sprk";
+
 SparkListFile = "Spark List File";
 SparkLibraryFile = "Spark Library File";
 SparkActionPlugin = "Spark Action Plugin";
