Another batch of warning fixup + Fix a critical issue which prevent display of the hotkey editor field

--- a/Spark/Resources/French.lproj/Localizable.strings
+++ b/Spark/Resources/French.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-﻿/* Application HotKeys - Application View Title (%@ => name) */
+/* Application HotKeys - Application View Title (%@ => name) */
 "%@ HotKeys" = "Raccourci %@";
 
 /* About Plugin (%@ => Plugin name) */
@@ -8,7 +8,7 @@
 "ABOUT_PLUGIN_MENU_ITEM" = "%@…";
 
 /* Backup filename */
-"SparkLibrary - %.4d-%.2d-%.2d" = "Bibliothèque Spark %.4d-%.2d-%.2d";
+"SparkLibrary - %@" = "Bibliothèque Spark %@";
 
 /* SparkLibrary Export as HTML Filename */
 "SparkLibrary - HTML" = "Bibliothèque Spark";
