Convert Agent into XPC Login Item.
Rewrite Editor / Agent communication using XPC primitive.
This is a work in progress and needs more tests.

--- a/Spark/Spark/Main Window/fr.lproj/SELibraryWindow.strings
+++ b/Spark/Spark/Main Window/fr.lproj/SELibraryWindow.strings
@@ -60,7 +60,7 @@
 "243.ibShadowedToolTips[0]" = "Crée un nouveau raccourci.";
 
 /* Class = "NSButtonCell"; title = "Démarrer le Daemon Spark"; ObjectID = "244"; */
-"244.title" = "Démarrer le Daemon Spark";
+"244.title" = "Démarrer l'Agent Spark";
 
 /* Class = "NSTextFieldCell"; title = "Text Cell"; ObjectID = "248"; */
 "248.title" = "Text Cell";
