--- a/Spark/Resources/fr.lproj/Localizable.strings
+++ b/Spark/Resources/fr.lproj/Localizable.strings
@@ -65,16 +65,16 @@
 "REVERT_MESSAGE" = "Le fichier d’archive « %@ » écrasera votre base de données existante. Cette opération est irréversible.";
 
 /* Spark Daemon status string */
-"Start Spark Daemon" = "Démarrer le Daemon Spark";
+"Start Spark Daemon" = "Démarrer l'Agent Spark";
 
 /* Spark Daemon Menu Title * Active * */
-"START_SPARK_DAEMON_MENU" = "Démarrer le Daemon Spark";
+"START_SPARK_DAEMON_MENU" = "Démarrer l'Agent Spark";
 
 /* Spark Daemon status string */
-"Stop Spark Daemon" = "Arrêter le Daemon Spark";
+"Stop Spark Daemon" = "Arrêter l'Agent Spark";
 
 /* Spark Daemon Menu Title * Desactive * */
-"STOP_SPARK_DAEMON_MENU" = "Arrêter le Daemon Spark";
+"STOP_SPARK_DAEMON_MENU" = "Arrêter l'Agent Spark";
 
 /* Trigger already used (%@ => entry name, %@ => previous name, %@ => shortcut) - Title */
 "CREATE_TRIGGER_CONFLICT_TITLE" = "«%1$@» ne peut-être activé car le raccourci «%3$@» est déjà utilisé par l'action «%2$@».";
