System plugin: Add display sleep.

--- a/SparkPlugins/System/Resources/fr.lproj/Localizable.strings
+++ b/SparkPlugins/System/Resources/fr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-﻿/* Should confirm ... */
+/* Should confirm ... */
 "..." = "…";
 
 /* Empty trash - Action Description */
@@ -24,6 +24,8 @@
 
 /* Screen Saver * Action Description * */
 "DESC_SCREEN_SAVER" = "Économiseur d'écran";
+
+"DESC_DISPLAY_SLEEP" = "Éteindre l'écran";
 
 /* ShutDown * Action Description * */
 "DESC_SHUTDOWN" = "Éteindre";
