--- a/SparkPlugins/System/Resources/fr.lproj/SystemPlugin.strings
+++ b/SparkPlugins/System/Resources/fr.lproj/SystemPlugin.strings
@@ -11,6 +11,8 @@
 /* Class = "NSMenuItem"; title = "Éteindre"; ObjectID = "66"; */
 "66.title" = "Éteindre";
 
+"4Qe-zl-S5y.title" = "Éteindre lʼécran";
+
 /* Class = "NSMenuItem"; title = "Fermer la session"; ObjectID = "77"; */
 "77.title" = "Fermer la session";
 
